<resources>
    <string name="app_name">Experiences App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?<b> Sign up</b></string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="i_have_an_account_login">I have an account.<b> Login</b></string>
    <string name="place_name">Place Name</string>
    <string name="title">Title</string>
    <string name="comments">Comments</string>
    <string name="choose_location">Choose location</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="future_visits">Future Visits</string>
    <string name="add_experience">Add Experience</string>
    <string name="home_page_experiences">Experiences</string>
    <string name="places_i_want_to_go">Places I Want to Go</string>
    <string name="fill_in_the_blanks">Please fill in the blanks!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="there_is_no_such_a_user">There is no such a user!</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="save">Save</string>
    <string name="location_status">Location Status</string>
    <string name="location_chosen">Location is chosen</string>
    <string name="please_choose_location">Please choose a location!</string>
    <string name="permission_needed_for_gallery">Permission needed for gallery!</string>
    <string name="give_permission">Give permission</string>
    <string name="please_add_picture">Please add a picture!</string>
    <string name="okay">Okay</string>
    <string name="location_of_place">Location of Place</string>
    <string name="priority">Priority</string>
    <string name="done">Done</string>
    <string name="place">%s / %s</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="high">HIGH</string>
    <string name="medium">MEDIUM</string>
    <string name="low">LOW</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="please_choose_priority_rate">Please choose a priority rate!</string>
    <string name="add_future_visit">Add Place For Future Visit</string>
    <string name="permission_needed_for_location">Permission needed for location!</string>
</resources>